--- a/travelblogs/src/app/globals.css
+++ b/travelblogs/src/app/globals.css
@@ -3,6 +3,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-source-sans-3: "Segoe UI", "Calibri", "Arial", sans-serif;
 }
 
 @theme inline {
@@ -21,8 +22,7 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: var(--font-source-sans-3), "Segoe UI", "Calibri", "Arial",
-    sans-serif;
+  font-family: var(--font-source-sans-3);
 }
 
 h1,
@@ -31,6 +31,5 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: var(--font-source-sans-3), "Segoe UI", "Calibri", "Arial",
-    sans-serif;
+  font-family: var(--font-source-sans-3);
 }
